--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
   </div>
   <!-- <div class="burger-menu"></div> -->
 
-  <main class="main">
+  <main class="main flex">
     <section class="hero">
       <div class="container hero__container flex">
         <div class="hero__content flex">
-          <h3 class="hero__sibtitle subtitle subtitle-decor_left">Меня зовут Александра Смит</h3>
+          <h3 class="hero__sibtitle subtitle">Меня зовут Александра Смит</h3>
           <h1 class="title">Я&nbsp;web-разработчик из&nbsp;города Москва</h1>
           <div class="hero__buttons flex">
             <button class="btn-primary btn-reset">Портфолио</button>
@@ -54,7 +54,47 @@
           </div>
         </div>
       </div>
-    </section>    
+    </section>
+
+    <section class="about" id="about">
+      <div class="container">
+        <div class="profile-card flex">
+          <img class="profile-card__image" src="img/content/photo-persona.jpg" alt="Фотография Александры">
+
+          <div class="profile-card__body">
+            <h3 class="subtitle profile-card__subtitle">Про меня</h3>
+            <h2 class="section-title profile-card__title">Меня зовут Александра</h2>
+            <div class="about__descr">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+            </div>
+            <ul class="about__list list-reset flex">
+              <li class="about__list-item infographic-item infographic-item_web">
+                <h4 class="caption about__caption">Web-разработка</h4>
+                <p class="infographic-text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+              </li>
+              <li class="about__list-item infographic-item infographic-item_app">
+                <h4 class="caption about__caption">Разработка приложений</h4>
+                <p class="infographic-text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+              </li>
+              <li class="about__list-item infographic-item infographic-item_design">
+                <h4 class="caption about__caption">UI/UX Design</h4>
+                <p class="infographic-text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="experience">
+      
+    </section>
   </main>  
 </body>
 </html>
