--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
-  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet"> -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -14,6 +11,7 @@
   <div class="social-media flex">
     <h3 class="social-media__subtitle">Социальные сети</h3>
     <div class="dash-line"></div>
+
     <ul class="social flex list-reset">
       <li class="social__item">
         <a href="#" class="social__link" aria-label="Перейти на страницу вконтакте">
@@ -46,7 +44,7 @@
     <section class="hero">
       <div class="container hero__container flex">
         <div class="hero__content flex">
-          <h3 class="hero__sibtitle subtitle">Меня зовут Александра Смит</h3>
+          <h3 class="hero__subtitle subtitle">Меня зовут Александра Смит</h3>
           <h1 class="title">Я&nbsp;web-разработчик из&nbsp;города Москва</h1>
           <div class="hero__buttons flex">
             <button class="btn-primary btn-reset">Портфолио</button>
@@ -58,9 +56,9 @@
 
     <section class="about" id="about">
       <div class="container">
-        <div class="profile-card flex">
-          <img class="profile-card__image" src="img/content/photo-persona.jpg" alt="Фотография Александры">
 
+        <div class="profile-card">
+          <img class="profile-card__image" src="img/content/photo-persona.jpg" alt="Фотография Александры">
           <div class="profile-card__body">
             <h3 class="subtitle profile-card__subtitle">Про меня</h3>
             <h2 class="section-title profile-card__title">Меня зовут Александра</h2>
@@ -68,19 +66,19 @@
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
             </div>
             <ul class="about__list list-reset flex">
-              <li class="about__list-item infographic-item infographic-item_web">
+              <li class="about__list-item infographic-icon infographic-icon_web">
                 <h4 class="caption about__caption">Web-разработка</h4>
                 <p class="infographic-text">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 </p>
               </li>
-              <li class="about__list-item infographic-item infographic-item_app">
+              <li class="about__list-item infographic-icon infographic-icon_app">
                 <h4 class="caption about__caption">Разработка приложений</h4>
                 <p class="infographic-text">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 </p>
               </li>
-              <li class="about__list-item infographic-item infographic-item_design">
+              <li class="about__list-item infographic-icon infographic-icon_design">
                 <h4 class="caption about__caption">UI/UX Design</h4>
                 <p class="infographic-text">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -93,7 +91,149 @@
     </section>
 
     <section class="experience">
-      
+      <div class="container">
+        <div class="title-group-centered flex">
+          <h3 class="subtitle subtitle_center-circle">Опыт</h3>
+          <h2 class="section-title">Чем я&nbsp;буду полезна</h2>
+        </div>
+        <div class="experience__content flex">
+
+          <div class="infographics-column">
+            <h3 class="infographics-column__title">
+              Образование
+            </h3>
+            <div class="infographics-column__body">
+
+              <div class="infographics-card">
+                <div class="infographics-card__header infographic-icon infographic-icon_university">
+                  <h4 class="caption infographics-card__title">
+                    МГТУ им. Н.&nbsp;Э.&nbsp;Баумана
+                  </h4>
+                  <p class="infographics-card__subtitle">
+                    Диплом магистра&nbsp;| Москва (2014-2020)
+                  </p>
+                </div>
+                <div class="infographic-text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo. 
+                </div>
+              </div>
+
+              <div class="infographics-card">
+                <div class="infographics-card__header infographic-icon infographic-icon_courses">
+                  <h4 class="caption infographics-card__title">
+                    Udemy
+                  </h4>
+                  <p class="infographics-card__subtitle">
+                    Курсы по&nbsp;Web-разработке
+                  </p>
+                </div>
+                <div class="infographic-text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo. 
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="infographics-column">
+            <h3 class="infographics-column__title">
+              Опыт работы
+            </h3>
+            <div class="infographics-column__body">
+
+              <div class="infographics-card">
+                <div class="infographics-card__header infographic-icon infographic-icon_developer">
+                  <h4 class="caption infographics-card__title">
+                    Front-End Developer
+                  </h4>
+                  <p class="infographics-card__subtitle">
+                    EPAM&nbsp;| Москва (2018-2019)
+                  </p>
+                </div>
+                <div class="infographic-text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo. 
+                </div>
+              </div>
+
+              <div class="infographics-card">
+                <div class="infographics-card__header infographic-icon infographic-icon_designer">
+                  <h4 class="caption infographics-card__title">
+                    UI/UX Designer
+                  </h4>
+                  <p class="infographics-card__subtitle">
+                    Squad Team&nbsp;| Москва (2018)
+                  </p>
+                </div>
+                <div class="infographic-text">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo. 
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="contacts">
+      <div class="container contacts__container">
+        <div class="profile-card">
+          <img class="profile-card__image" src="img/content/photo-persona.jpg" alt="Фотография Александры">
+          <div class="profile-card__body">
+            <h3 class="subtitle profile-card__subtitle">Контакты</h3>
+            <h2 class="section-title profile-card__title">Свяжитесь со&nbsp;мной</h2>
+
+            <div class="contacts__descr flex">
+              <h4 class="caption">Любым удобным для вас способом:</h4>
+
+              <ul class="social flex list-reset">
+                <li class="social__item">
+                  <a href="#" class="social__link" aria-label="Перейти на страницу вконтакте">
+                    <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M25.6055 0L4.39453 0C1.97159 0 0 1.97159 0 4.39453L0 25.6055C0 28.0284 1.97159 30 4.39453 30L13.2422 30L13.2422 19.3945L9.72656 19.3945L9.72656 14.1211H13.2422V10.5469C13.2422 7.63893 15.6077 5.27344 18.5156 5.27344L23.8477 5.27344V10.5469H18.5156L18.5156 14.1211H23.8477L22.9687 19.3945H18.5156V30H25.6055C28.0284 30 30 28.0284 30 25.6055L30 4.39453C30 1.97159 28.0284 0 25.6055 0Z" fill="black"/>
+                    </svg>                      
+                  </a>
+                </li>
+                <li class="social__item">
+                  <a href="#" class="social__link" aria-label="Перейти на страницу вконтакте">
+                    <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M15 30C23.2863 30 30 23.2863 30 15C30 6.71375 23.2863 0 15 0C6.71375 0 0 6.71375 0 15C0 23.2863 6.71375 30 15 30ZM6.86375 14.675L21.3263 9.09875C21.9975 8.85625 22.5837 9.2625 22.3662 10.2775L22.3675 10.2762L19.905 21.8775C19.7225 22.7 19.2337 22.9 18.55 22.5125L14.8 19.7487L12.9912 21.4913C12.7912 21.6913 12.6225 21.86 12.235 21.86L12.5013 18.0438L19.4513 11.765C19.7537 11.4987 19.3837 11.3488 18.985 11.6138L10.3963 17.0212L6.69375 15.8663C5.89 15.6112 5.8725 15.0625 6.86375 14.675Z" fill="black"/>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social__item">
+                  <a href="#" class="social__link" aria-label="Перейти на страницу вконтакте">
+                    <svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M-9.01547e-07 9.375L-4.09794e-07 20.625C-1.83506e-07 25.8019 4.19812 30 9.375 30L20.625 30C25.8019 30 30 25.8019 30 20.625L30 9.375C30 4.19813 25.8019 7.79513e-07 20.625 1.0058e-06L9.375 1.49755e-06C4.19812 1.72384e-06 -1.12784e-06 4.19813 -9.01547e-07 9.375ZM20.625 2.8125C24.2437 2.8125 27.1875 5.75625 27.1875 9.375L27.1875 20.625C27.1875 24.2437 24.2437 27.1875 20.625 27.1875L9.375 27.1875C5.75625 27.1875 2.8125 24.2437 2.8125 20.625L2.8125 9.375C2.8125 5.75625 5.75625 2.8125 9.375 2.8125L20.625 2.8125Z" fill="black"/>
+                      <path d="M7.5 15C7.5 19.1419 10.8581 22.5 15 22.5C19.1419 22.5 22.5 19.1419 22.5 15C22.5 10.8581 19.1419 7.5 15 7.5C10.8581 7.5 7.5 10.8581 7.5 15ZM19.6875 15C19.6875 17.5837 17.5837 19.6875 15 19.6875C12.4144 19.6875 10.3125 17.5838 10.3125 15C10.3125 12.4163 12.4144 10.3125 15 10.3125C17.5837 10.3125 19.6875 12.4162 19.6875 15Z" fill="black"/>
+                      <path d="M7.93685 6.93715C7.93685 6.38521 7.48942 5.93777 6.93748 5.93777C6.38554 5.93777 5.93811 6.38521 5.93811 6.93715C5.93811 7.48909 6.38554 7.93652 6.93748 7.93652C7.48942 7.93652 7.93685 7.48909 7.93685 6.93715Z" fill="black"/>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+              <h4 class="caption">Или оставьте ваши данные и&nbsp;я&nbsp;сама вам напишу:</h4>
+            </div>
+
+            <form action="" class="form flex">
+              <div class="inputs-group flex">
+                <fieldset class="form__fieldset inputs-group__input">
+                  <legend class="form__legend">Ваше имя</legend>
+                  <input type="text" class="form__input" name="name" placeholder="Иван">
+                </fieldset>
+                <fieldset class="form__fieldset inputs-group__input">
+                  <legend class="form__legend">Ваша почта</legend>
+                  <input type="email" class="form__input" name="email">
+                </fieldset>
+              </div>
+              <fieldset class="form__fieldset">
+                <legend class="form__legend">Ваше сообщение</legend>
+                <textarea class="form__textarea" name="message"></textarea>
+              </fieldset>
+              <button class="form__button btn-primary btn-reset" type="submit">
+                Отправить сообщение
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
     </section>
   </main>  
 </body>
